// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create an empty TabContainer instance 1`] = `
<TabContainer
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  location="top"
  maxTabs={5}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onRemove={[Function]}
  onSelect={[Function]}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  visible={true}
/>
`;

exports[`Test TabContainer retrieval functions 1`] = `
<TabContainer
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  location="top"
  maxTabs={5}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onRemove={[Function]}
  onSelect={[Function]}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  visible={true}
/>
`;

exports[`Test disabling the TabContainer instance 1`] = `
<TabContainer
  controlled={true}
  direction="right"
  disabled={true}
  focus={false}
  hidden={false}
  location="top"
  maxTabs={5}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onRemove={[Function]}
  onSelect={[Function]}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  visible={true}
/>
`;

exports[`Test making the TabContainer invisible 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="top"
  maxHeight={null}
  maxTabs={5}
  maxWidth={null}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onError={[Function]}
  onSelect={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <TabContainer__TabContainerView
    className="ui-tab-container"
    controlled={true}
    direction="right"
    disabled={false}
    focus={false}
    hidden={false}
    location="top"
    maxTabs={5}
    minHeight="120px"
    minWidth="500px"
    noborder={false}
    noclose={false}
    noedit={false}
    nohover={false}
    nonavigation={false}
    nopropagation={false}
    notheme={false}
    notooltip={false}
    obj="TabContainer"
    onSelect={[Function]}
    ripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    tabWidth={100}
    testing={true}
    visible={false}
  >
    <TabContainer__TabBarView
      className="ui-tab-bar"
      controlled={true}
      direction="right"
      disabled={false}
      focus={false}
      hidden={false}
      location="top"
      maxTabs={5}
      minHeight="100px"
      minWidth="350px"
      noborder={false}
      noclose={false}
      noedit={false}
      nohover={false}
      nonavigation={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      obj="TabContainer"
      onSelect={[Function]}
      ripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      tabWidth={100}
      testing={true}
      visible={false}
    >
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="0"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="top"
        ripple={false}
        selected={true}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #1"
        visible={true}
        width="100px"
      >
        #1
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="1"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="top"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #2"
        visible={true}
        width="100px"
      >
        #2
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="2"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="top"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #3"
        visible={true}
        width="100px"
      >
        #3
      </Tab>
      <TabContainer__TabNavigationView
        className="ui-tab-navigation"
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        location="top"
        maxTabs={5}
        minHeight="100px"
        minWidth="350px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nonavigation={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="TabContainer"
        onSelect={[Function]}
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        tabWidth={100}
        testing={true}
        visible={false}
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-left"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-right"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </TabContainer__TabNavigationView>
    </TabContainer__TabBarView>
    <TabContainer__TabContentView
      className="ui-tab-content"
      location="top"
      noborder={false}
    >
      #1
    </TabContainer__TabContentView>
  </TabContainer__TabContainerView>
</Wrapper>
`;

exports[`Test removing the first item from the TabContainer 1`] = `
<TabContainer
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  location="top"
  maxTabs={5}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onRemove={[MockFunction]}
  onSelect={[Function]}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  visible={true}
/>
`;

exports[`Test retrieval of Tabs props object 1`] = `
Object {
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "hidden": false,
  "location": "top",
  "maxTabs": 5,
  "minHeight": "100px",
  "minWidth": "350px",
  "noborder": false,
  "noclose": false,
  "noedit": false,
  "nohover": false,
  "nonavigation": false,
  "nopropagation": false,
  "notheme": false,
  "notooltip": false,
  "obj": "TabContainer",
  "onRemove": [Function],
  "onSelect": [Function],
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "tabWidth": 100,
  "testing": true,
  "visible": true,
}
`;

exports[`Test retrieval of Tabs props object 2`] = `
Object {
  "children": null,
  "selectedTab": "",
  "sizing": "normal",
  "style": Object {},
}
`;

exports[`Test selecting the first tab within the TabContainer 1`] = `
<TabContainer
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  location="top"
  maxTabs={5}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onRemove={[Function]}
  onSelect={[MockFunction]}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  visible={true}
/>
`;

exports[`Test the TabContainer with the previous and next buttons 1`] = `
<TabContainer
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  location="top"
  maxTabs={5}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onRemove={[Function]}
  onSelect={[MockFunction]}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  visible={true}
/>
`;

exports[`Test the creation of a TabContainer instance (bottom) 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="bottom"
  maxHeight={null}
  maxTabs={5}
  maxWidth={null}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onError={[Function]}
  onSelect={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <TabContainer__TabContainerView
    className="ui-tab-container"
    controlled={true}
    direction="right"
    disabled={false}
    focus={false}
    hidden={false}
    location="bottom"
    maxTabs={5}
    minHeight="120px"
    minWidth="500px"
    noborder={false}
    noclose={false}
    noedit={false}
    nohover={false}
    nonavigation={false}
    nopropagation={false}
    notheme={false}
    notooltip={false}
    obj="TabContainer"
    onSelect={[Function]}
    ripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    tabWidth={100}
    testing={true}
    visible={true}
  >
    <TabContainer__TabContentView
      className="ui-tab-content"
      location="bottom"
      noborder={false}
    >
      #1
    </TabContainer__TabContentView>
    <TabContainer__TabBarView
      className="ui-tab-bar"
      controlled={true}
      direction="right"
      disabled={false}
      focus={false}
      hidden={false}
      location="bottom"
      maxTabs={5}
      minHeight="100px"
      minWidth="350px"
      noborder={false}
      noclose={false}
      noedit={false}
      nohover={false}
      nonavigation={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      obj="TabContainer"
      onSelect={[Function]}
      ripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      tabWidth={100}
      testing={true}
      visible={true}
    >
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="0"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="bottom"
        ripple={false}
        selected={true}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #1"
        visible={true}
        width="100px"
      >
        #1
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="1"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="bottom"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #2"
        visible={true}
        width="100px"
      >
        #2
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="2"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="bottom"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #3"
        visible={true}
        width="100px"
      >
        #3
      </Tab>
      <TabContainer__TabNavigationView
        className="ui-tab-navigation"
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        location="bottom"
        maxTabs={5}
        minHeight="100px"
        minWidth="350px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nonavigation={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="TabContainer"
        onSelect={[Function]}
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        tabWidth={100}
        testing={true}
        visible={true}
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-left"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-right"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </TabContainer__TabNavigationView>
    </TabContainer__TabBarView>
  </TabContainer__TabContainerView>
</Wrapper>
`;

exports[`Test the creation of a TabContainer instance (left) 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="left"
  maxHeight={null}
  maxTabs={5}
  maxWidth={null}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onError={[Function]}
  onSelect={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <TabContainer__TabContainerView
    className="ui-tab-container"
    controlled={true}
    direction="right"
    disabled={false}
    focus={false}
    hidden={false}
    location="left"
    maxTabs={5}
    minHeight="120px"
    minWidth="500px"
    noborder={false}
    noclose={false}
    noedit={false}
    nohover={false}
    nonavigation={false}
    nopropagation={false}
    notheme={false}
    notooltip={false}
    obj="TabContainer"
    onSelect={[Function]}
    ripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    tabWidth={100}
    testing={true}
    visible={true}
  >
    <TabContainer__TabBarView
      className="ui-tab-bar"
      controlled={true}
      direction="right"
      disabled={false}
      focus={false}
      hidden={false}
      location="left"
      maxTabs={5}
      minHeight="100px"
      minWidth="350px"
      noborder={false}
      noclose={false}
      noedit={false}
      nohover={false}
      nonavigation={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      obj="TabContainer"
      onSelect={[Function]}
      ripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      tabWidth={100}
      testing={true}
      visible={true}
    >
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="0"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="left"
        ripple={false}
        selected={true}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #1"
        visible={true}
        width="100px"
      >
        #1
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="1"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="left"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #2"
        visible={true}
        width="100px"
      >
        #2
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="2"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="left"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #3"
        visible={true}
        width="100px"
      >
        #3
      </Tab>
      <TabContainer__TabNavigationView
        className="ui-tab-navigation"
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        location="left"
        maxTabs={5}
        minHeight="100px"
        minWidth="350px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nonavigation={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="TabContainer"
        onSelect={[Function]}
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        tabWidth={100}
        testing={true}
        visible={true}
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-left"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-right"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </TabContainer__TabNavigationView>
    </TabContainer__TabBarView>
    <TabContainer__TabContentView
      className="ui-tab-content"
      location="left"
      noborder={false}
    >
      #1
    </TabContainer__TabContentView>
  </TabContainer__TabContainerView>
</Wrapper>
`;

exports[`Test the creation of a TabContainer instance (right) 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="right"
  maxHeight={null}
  maxTabs={5}
  maxWidth={null}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onError={[Function]}
  onSelect={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <TabContainer__TabContainerView
    className="ui-tab-container"
    controlled={true}
    direction="right"
    disabled={false}
    focus={false}
    hidden={false}
    location="right"
    maxTabs={5}
    minHeight="120px"
    minWidth="500px"
    noborder={false}
    noclose={false}
    noedit={false}
    nohover={false}
    nonavigation={false}
    nopropagation={false}
    notheme={false}
    notooltip={false}
    obj="TabContainer"
    onSelect={[Function]}
    ripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    tabWidth={100}
    testing={true}
    visible={true}
  >
    <TabContainer__TabContentView
      className="ui-tab-content"
      location="right"
      noborder={false}
    >
      #1
    </TabContainer__TabContentView>
    <TabContainer__TabBarView
      className="ui-tab-bar"
      controlled={true}
      direction="right"
      disabled={false}
      focus={false}
      hidden={false}
      location="right"
      maxTabs={5}
      minHeight="100px"
      minWidth="350px"
      noborder={false}
      noclose={false}
      noedit={false}
      nohover={false}
      nonavigation={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      obj="TabContainer"
      onSelect={[Function]}
      ripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      tabWidth={100}
      testing={true}
      visible={true}
    >
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="0"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="right"
        ripple={false}
        selected={true}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #1"
        visible={true}
        width="100px"
      >
        #1
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="1"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="right"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #2"
        visible={true}
        width="100px"
      >
        #2
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="2"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="right"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #3"
        visible={true}
        width="100px"
      >
        #3
      </Tab>
      <TabContainer__TabNavigationView
        className="ui-tab-navigation"
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        location="right"
        maxTabs={5}
        minHeight="100px"
        minWidth="350px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nonavigation={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="TabContainer"
        onSelect={[Function]}
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        tabWidth={100}
        testing={true}
        visible={true}
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-left"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-right"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </TabContainer__TabNavigationView>
    </TabContainer__TabBarView>
  </TabContainer__TabContainerView>
</Wrapper>
`;

exports[`Test the creation of a TabContainer instance (top) 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="top"
  maxHeight={null}
  maxTabs={5}
  maxWidth={null}
  minHeight="100px"
  minWidth="350px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nonavigation={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="TabContainer"
  onError={[Function]}
  onSelect={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  tabWidth={100}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <TabContainer__TabContainerView
    className="ui-tab-container"
    controlled={true}
    direction="right"
    disabled={false}
    focus={false}
    hidden={false}
    location="top"
    maxTabs={5}
    minHeight="120px"
    minWidth="500px"
    noborder={false}
    noclose={false}
    noedit={false}
    nohover={false}
    nonavigation={false}
    nopropagation={false}
    notheme={false}
    notooltip={false}
    obj="TabContainer"
    onSelect={[Function]}
    ripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    tabWidth={100}
    testing={true}
    visible={true}
  >
    <TabContainer__TabBarView
      className="ui-tab-bar"
      controlled={true}
      direction="right"
      disabled={false}
      focus={false}
      hidden={false}
      location="top"
      maxTabs={5}
      minHeight="100px"
      minWidth="350px"
      noborder={false}
      noclose={false}
      noedit={false}
      nohover={false}
      nonavigation={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      obj="TabContainer"
      onSelect={[Function]}
      ripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      tabWidth={100}
      testing={true}
      visible={true}
    >
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="0"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="top"
        ripple={false}
        selected={true}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #1"
        visible={true}
        width="100px"
      >
        #1
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="1"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="top"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #2"
        visible={true}
        width="100px"
      >
        #2
      </Tab>
      <Tab
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        href={
          Object {
            "hiddenTabHandler": [Function],
            "selectHandler": [Function],
          }
        }
        id="2"
        location="none"
        minWidth="120px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="Tab"
        onClick={[Function]}
        onClose={[Function]}
        orientation="top"
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab #3"
        visible={true}
        width="100px"
      >
        #3
      </Tab>
      <TabContainer__TabNavigationView
        className="ui-tab-navigation"
        controlled={true}
        direction="right"
        disabled={false}
        focus={false}
        hidden={false}
        location="top"
        maxTabs={5}
        minHeight="100px"
        minWidth="350px"
        noborder={false}
        noclose={false}
        noedit={false}
        nohover={false}
        nonavigation={false}
        nopropagation={false}
        notheme={false}
        notooltip={false}
        obj="TabContainer"
        onSelect={[Function]}
        ripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        tabWidth={100}
        testing={true}
        visible={true}
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-left"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color="#cccccc"
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="chevron-right"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </TabContainer__TabNavigationView>
    </TabContainer__TabBarView>
    <TabContainer__TabContentView
      className="ui-tab-content"
      location="top"
      noborder={false}
    >
      #1
    </TabContainer__TabContentView>
  </TabContainer__TabContainerView>
</Wrapper>
`;
